# learn_fastapi

./: .gitignore  pyproject.toml
backend/: Dockerfile  README.md  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 2024_09_13_0020-612b89608041_added_user_model.py  2024_09_17_2323-f9d523b37ced_added_user_model.py
infra_learn_fastapi/: .env  docker-compose.yml
