[project]
name = "learn-fastapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "codest", email = "thecodest@ya.ru" }
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
