[project]
name = "learn-fastapi"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "codest", email = "thecodest@ya.ru" }
]
dependencies = [
    "fastapi>=0.112.2",
    "uvicorn[standard]>=0.30.6",
    "sqlalchemy>=2.0.34",
    "alembic>=1.13.2",
    "python-dotenv>=1.0.1",
    "psycopg[binary,pool]>=3.2.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
